--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Leah &plus; Adam</title>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,16 +14,15 @@
             <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha256-j+P6EZJVrbXgwSR5Mx+eCS6FvP9Wq27MBRC/ogVriY0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
-
             <link href="{{ static('css/loveicon.css') }}" rel="stylesheet" type="text/css" />
             <link href="{{ static('css/style.css') }}" rel="stylesheet" type="text/css" />
-        {% endblock css %}
-        {% block inline_css %}{% endblock inline_css %}
 
 {#        <!-- Plugins CSS -->#}
 {#        <link rel="stylesheet" href="assets/plugins/Gallery/css/blueimp-gallery.min.css">#}
 {#        <link rel="stylesheet" href="assets/plugins/Bootstrap-Image-Gallery/css/bootstrap-image-gallery.min.css">#}
 
+        {% endblock css %}
+        {% block inline_css %}{% endblock inline_css %}
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -50,7 +49,7 @@
 {#                            <li class="nav-item"><a class="scrollto" href="#story">Our Story</a></li>#}
 {#                            <li class="nav-item"><a class="scrollto" href="#gallery">Gallery</a></li>#}
 {#                            <li class="nav-item"><a class="scrollto" href="#gift">Registries</a></li>#}
-                            <li class="nav-item"><a href="#" data-toggle="modal" data-target="#rsvp-modal">RSVP</a></li>
+                            <li class="nav-item"><a href="#" data-toggle="modal" data-target="#rsvp_modal">RSVP</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -71,7 +70,7 @@
                         <div class="date">
                             <span class="date-text">{{ CEREMONY_DATETIME|date('F j, Y') }}</span>
                         </div>
-                        <a class="btn btn-primary btn-rsvp" href="#" data-toggle="modal" data-target="#rsvp-modal">RSVP Now</a>
+                        <a class="btn btn-primary btn-rsvp" href="#" data-toggle="modal" data-target="#rsvp_modal">RSVP Now</a>
                     </div>
                 </div>
             </div>
@@ -81,35 +80,38 @@
         {% include 'sections/story.html' %}
         {% include 'sections/gallery.html' %}
         {% include 'sections/gifts.html' %}
-
         <footer class="footer">
             <div class="footer-content text-center">
                 <div class="container">
-                    <div class="credit">Site made by Leah's big brother Ben.</div>
+                    <div class="credit">Wedding/RSVP site made by Leah's big brother Ben.</div>
                 </div>
             </div>
         </footer>
-
         {% include 'modals/rsvp.html' %}
         {% include 'modals/gallery.html' %}
         {% include 'modals/directions.html' %}
         {% include 'modals/facilities.html' %}
-
         {% block js %}
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous" type="application/javascript"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous" type="application/javascript"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" integrity="sha256-obZACiHd7gkOk9iIL/pimWMTJ4W/pBsKu+oZnSeBIek=" crossorigin="anonymous" type="application/javascript"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js" integrity="sha256-0atoj6xVOJUoBM8Vp5PFywwLLE+aNl2svi4Q9UWZ+dQ=" crossorigin="anonymous" type="application/javascript"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" integrity="sha256-Q1iNs8Pv5aDBQqByxUM4pQmdzbPFyNooDFJKojYnVpg=" crossorigin="anonymous" type="application/javascript"></script>
-            <script src="https://maps.google.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}" type="text/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.3/js.cookie.min.js" integrity="sha256-S20kSlaai+/AuQHj3KjoLxmxiOLT5298YvzpaTXtYxE=" crossorigin="anonymous" type="text/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous" type="text/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous" type="text/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" integrity="sha256-obZACiHd7gkOk9iIL/pimWMTJ4W/pBsKu+oZnSeBIek=" crossorigin="anonymous" type="text/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js" integrity="sha256-0atoj6xVOJUoBM8Vp5PFywwLLE+aNl2svi4Q9UWZ+dQ=" crossorigin="anonymous" type="text/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" integrity="sha256-Q1iNs8Pv5aDBQqByxUM4pQmdzbPFyNooDFJKojYnVpg=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.24/gmaps.min.js" integrity="sha256-C3vPkcHJk9t5Pi6C+Nc+faqv/EZZqNBnxoDfTXEorQk=" crossorigin="anonymous" type="text/javascript"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js" integrity="sha256-7QS1cHsH75h3IFgrFKsdhmKHHpWqF82sb/9vNLqcqs0=" crossorigin="anonymous" type="text/javascript"></script>
-            <script src="{{ static('js/script.js') }}" type="application/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js" integrity="sha256-7QS1cHsH75h3IFgrFKsdhmKHHpWqF82sb/9vNLqcqs0=" crossorigin="anonymous"></script>
+            <script src="https://maps.google.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}" type="text/javascript"></script>
+            <script src="{{ static('js/functions.js') }}" type="text/javascript"></script>
+            <script src="{{ static('js/countdown.js') }}" type="text/javascript"></script>
+            <script src="{{ static('js/search.js') }}" type="text/javascript"></script>
+            <script src="{{ static('js/script.js') }}" type="text/javascript"></script>
         {% endblock js %}
         {% block inline_js %}
-            <script type="application/javascript">
+            <script type="text/javascript">
                 $(function () {
-                    $('#countdown_box').countdown(new Date("{{ CEREMONY_DATETIME|date('c') }}"));
+                    var ceremony_date = new Date("{{ CEREMONY_DATETIME|date('c') }}");
+                    $('#search_form').search("{{ url('search') }}");
+                    $('#countdown_box').countdown(ceremony_date);
                 });
             </script>
         {% endblock inline_js %}
@@ -120,7 +122,6 @@
 {#        <script type="text/javascript" src="assets/plugins/jquery-inview/jquery.inview.min.js"></script>#}
 {#        <script type="text/javascript" src="assets/plugins/imagesloaded.pkgd.min.js"></script>#}
 {#        <script type="text/javascript" src="assets/plugins/packery.pkgd.min.js"></script>#}
-{##}
 {#        <!--//form related JS -->#}
 {#        <script type="text/javascript" src="assets/plugins/jquery-validation/dist/jquery.validate.min.js"></script>#}
 {#        <!--//Image Gallery related JS -->#}
