--- a/rsvp/templates/modals/rsvp.html
+++ b/rsvp/templates/modals/rsvp.html
@@ -1,86 +1,115 @@
-{#<!-- RSVP Modal -->#}
-{#<div id="rsvp-modal" class="modal modal-rsvp" tabindex="-1" role="dialog" aria-labelledby="rsvpModalLabel" aria-hidden="true">#}
-{#    <div class="modal-dialog" role="document">#}
-{#        <div class="modal-content">#}
-{#            <div class="modal-header">#}
-{#                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>#}
-{#                <h2 id="rsvpModalLabel" class="modal-title text-center">#}
-{#                    <span class="title script display-block"><span class="title-deco-left"></span><span class="title-text">RSVP</span><span class="title-deco-right"></span></span>#}
-{#                    <span class="subtitle display-block">Come and celebrate with us! <br> Please RSVP by May 16, 2016</span>#}
-{#                </h2>#}
-{##}
-{#            </div><!--//modal-header-->#}
-{#            <div class="modal-body">#}
-{#                <form id="rsvp-form" class="rsvp-form form" method="post" action="mailer.php">#}
-{#                    <div id="form-messages" class="text-center"></div>#}
-{#                    <div class="row text-left">#}
-{#                        <div class="name-group form-group col-xs-12 col-sm-6">#}
-{#                            <div class="form-group-inner">#}
-{#                                <label for="cname">Name</label>#}
-{#                                <input type="text" class="form-control" id="cname" name="name" placeholder="Your full name" minlength="2" aria-required="true" required>#}
+<div id="rsvp_modal" class="modal modal-rsvp" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h2 class="modal-title title text-center">
+                    <div class="script">
+                        <span class="title-deco-left"></span>
+                        <span class="title-text">RSVP</span>
+                        <span class="title-deco-right"></span>
+                    </div>
+                    <div class="subtitle">
+                        {% if request.invite %}
+                            <span><strong>{{ request.invite.name }}</strong> come and celebrate with us!</span>
+                            <br />
+                            <span>Please RSVP by {{ RSVP_DEADLINE|date('F j, Y') }}</span>
+                        {% else %}
+                            <span>Let's find your invitation!</span>
+                        {% endif %}
+                    </div>
+                </h2>
+            </div>
+            <div class="modal-body">
+                {% if request.invite %}
+                    <form id="rsvp_form" class="rsvp-form form" method="post" action="">
+                        {% csrf_token %}
+{#                        <div id="form_messages" class="text-center"></div>#}
+{#                        <div class="row text-left">#}
+{#                            <div class="name-group form-group col-xs-12 col-sm-6">#}
+{#                                <div class="form-group-inner">#}
+{#                                    <label for="cname">Name</label>#}
+{#                                    <input type="text" class="form-control" id="cname" name="name" placeholder="Your full name" minlength="2" aria-required="true" required>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            <div class="email-group form-group col-xs-12 col-sm-6">#}
+{#                                <div class="form-group-inner">#}
+{#                                    <label for="cemail">Email</label>#}
+{#                                    <input type="email" class="form-control" id="cemail" name="email" placeholder="Your email address" aria-required="true" required>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            <div class="events-group form-group col-xs-12 col-sm-6">#}
+{#                                <div class="form-group-inner">#}
+{#                                    <label for="cevents">Which events are you attending?</label>#}
+{#                                    <select class="form-control" id="cevents" name="events" aria-required="true" required>#}
+{#                                        <option value="" selected>Please select</option>#}
+{#                                        <option value="Ceremony and Reception">Ceremony and Reception</option>#}
+{#                                        <option value="Ceremony Only">Ceremony Only</option>#}
+{#                                        <option value="Reception Only">Reception Only</option>#}
+{#                                        <option value="Sorry, can't make either">Sorry, can't make either</option>#}
+{#                                    </select>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            <div class="guests-group form-group col-xs-12 col-sm-6">#}
+{#                                <div class="form-group-inner">#}
+{#                                    <label for="cguests">How many guests are you bringing?</label>#}
+{#                                    <select class="form-control" id="cguests" name="guests" aria-required="true" required>#}
+{#                                        <option value="" selected>Please select</option>#}
+{#                                        <option value="No Guests">No Guests</option>#}
+{#                                        <option value="1 Guest">1 Guest</option>#}
+{#                                        <option value="2 Guests">2 Guests</option>#}
+{#                                        <option value="3 Guests">3 Guests</option>#}
+{#                                        <option value="4 Guests">4 Guests</option>#}
+{#                                        <option value="5 Guests">5 Guests</option>#}
+{#                                    </select>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            <div class="guestinfo-group form-group col-xs-12" style="display:none">#}
+{#                                <div class="form-group-inner">#}
+{#                                    <label for="cguestinfo">Guest(s) Name(s)</label>#}
+{#                                    <textarea class="form-control" id="cguestinfo" name="guestinfo" placeholder="Please provide full name(s)" required></textarea>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            <div class="message-group form-group col-xs-12">#}
+{#                                <div class="form-group-inner">#}
+{#                                    <label for="cmessage">Additional Information</label>#}
+{#                                    <textarea class="form-control" id="cmessage" name="message" placeholder="eg. Vegetarian &amp; dietary requests"></textarea>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                            <div class="form-group col-xs-12">#}
+{#                                <button type="submit" class="btn btn-block btn-primary">Submit</button>#}
+{#                            </div>#}
+{#                            <div class="additional-info text-center col-xs-12">#}
+{#                                If you have any questions please let us know. You can either email us at#}
+{#                                <a href="#">amynickwedding@gmail.com</a> or give us a ring at 0133 123455#}
 {#                            </div>#}
 {#                        </div>#}
-{#                        <div class="email-group form-group col-xs-12 col-sm-6">#}
-{#                            <div class="form-group-inner">#}
-{#                                <label for="cemail">Email</label>#}
-{#                                <input type="email" class="form-control" id="cemail" name="email" placeholder="Your email address" aria-required="true" required>#}
-{#                            </div>#}
-{#                        </div>#}
-{##}
-{#                        <div class="events-group form-group col-xs-12 col-sm-6">#}
-{#                            <div class="form-group-inner">#}
-{#                                <label for="cevents">Which events are you attending?</label>#}
-{#                                <select class="form-control" id="cevents" name="events" aria-required="true" required>#}
-{#                                    <option value="" selected>Please select</option>#}
-{#                                    <option value="Ceremony and Reception">Ceremony and Reception</option>#}
-{#                                    <option value="Ceremony Only">Ceremony Only</option>#}
-{#                                    <option value="Reception Only">Reception Only</option>#}
-{#                                    <option value="Sorry, can't make either">Sorry, can't make either</option>#}
-{#                                </select>#}
-{#                            </div>#}
-{#                        </div>#}
-{##}
-{#                        <div class="guests-group form-group col-xs-12 col-sm-6">#}
-{#                            <div class="form-group-inner">#}
-{#                                <label for="cguests">How many guests are you bringing?</label>#}
-{#                                <select class="form-control" id="cguests" name="guests" aria-required="true" required>#}
-{#                                    <option value="" selected>Please select</option>#}
-{#                                    <option value="No Guests">No Guests</option>#}
-{#                                    <option value="1 Guest">1 Guest</option>#}
-{#                                    <option value="2 Guests">2 Guests</option>#}
-{#                                    <option value="3 Guests">3 Guests</option>#}
-{#                                    <option value="4 Guests">4 Guests</option>#}
-{#                                    <option value="5 Guests">5 Guests</option>#}
-{#                                </select>#}
-{#                            </div>#}
-{#                        </div>#}
-{##}
-{#                        <div class="guestinfo-group form-group col-xs-12" style="display:none">#}
-{#                            <div class="form-group-inner">#}
-{#                                <label for="cguestinfo">Guest(s) Name(s)</label>#}
-{#                                <textarea class="form-control" id="cguestinfo" name="guestinfo" placeholder="Please provide full name(s)" required></textarea>#}
-{#                            </div>#}
-{#                        </div>#}
-{##}
-{#                        <div class="message-group form-group col-xs-12">#}
-{#                            <div class="form-group-inner">#}
-{#                                <label for="cmessage">Additional Information</label>#}
-{#                                <textarea class="form-control" id="cmessage" name="message" placeholder="eg. Vegetarian &amp; dietary requests"></textarea>#}
-{#                            </div>#}
-{#                        </div>#}
-{##}
-{#                        <div class="form-group col-xs-12">#}
-{#                            <button type="submit" class="btn btn-block btn-primary">Submit</button>#}
-{#                        </div>#}
-{##}
-{#                        <div class="additional-info text-center col-xs-12">#}
-{#                            If you have any questions please let us know. You can either email us at#}
-{#                            <a href="#">amynickwedding@gmail.com</a> or give us a ring at 0133 123455#}
-{#                        </div><!--//notes-->#}
-{##}
-{#                    </div><!--//row-->#}
-{#                </form><!--//rsvp-form-->#}
-{#            </div><!--//modal-body-->#}
-{#        </div><!--//modal-content-->#}
-{#    </div><!--//modal-dialog-->#}
-{#</div><!--//modal-->#}
+                    </form>
+                {% else %}
+                    <form id="search_form" class="search-form form" method="post" action="?search" autocomplete="off">
+                        {{ search_form.invite }}
+                        <div class="name-group form-group text-center">
+                            <label>Please enter the name on the invitation</label>
+                            {{ suggest_form.name }}
+                        </div>
+                        <div class="loading" style="display:none;">
+                            <div class="progress progress-striped active">
+                                <div class="progress-bar progress-bar-danger"></div>
+                            </div>
+                        </div>
+                        <div class="suggestions" style="display:none;"></div>
+                        <div class="authorize" style="display:none;">
+                            <div class="code-group form-group text-center">
+                                <label>Please enter the code on the invitation</label>
+                                {{ search_form.key }}
+                            </div>
+                            <div class="form-group text-center">
+                                <button type="submit" class="btn btn-block btn-primary">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
