--- a/rsvp/templates/sections/wedding.html
+++ b/rsvp/templates/sections/wedding.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="action-wrapper">
-            <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#rsvp-modal">RSVP Now</a>
+            <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#rsvp_modal">RSVP Now</a>
         </div>
     </div>
     <div id="map" class="map-container"></div>
