Update with Leah's updated information
A few changes to make this site actually accurate.

--- a/rsvp/templates/sections/wedding.html
+++ b/rsvp/templates/sections/wedding.html
@@ -10,7 +10,7 @@
             <div class="ceremony-col col-xs-12 col-sm-6">
                 <div class="col-inner">
                     <h4 class="subtitle">Ceremony</h4>
-                    <p class="intro">We are getting married at Immaculate Conception Church.</p>
+                    <p class="intro">We are getting married at St Athanasius Church.</p>
                     <ul class="meta-list list-unstyled text-left center-block">
                         <li>
                             <span class="icon-calendar love-icon"></span>
@@ -22,7 +22,7 @@
                         </li>
                         <li>
                             <span class="icon-map love-icon"></span>
-                            <span>Immaculate Conception Church</span>
+                            <span>St Athanasius</span>
                         </li>
                     </ul>
                 </div>
@@ -30,7 +30,7 @@
             <div class="reception-col col-xs-12 col-sm-6">
                 <div class="col-inner">
                     <h4 class="subtitle">Reception</h4>
-                    <p class="intro">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                    <p class="intro">And our reception will be at Heartland Acres.</p>
                     <ul class="meta-list list-unstyled text-left center-block">
                         <li>
                             <span class="icon-calendar love-icon"></span>
@@ -42,7 +42,7 @@
                         </li>
                         <li>
                             <span class="icon-map love-icon"></span>
-                            <span>Wapsie Valley High School</span>
+                            <span>Heartland Acres</span>
                         </li>
                     </ul>
                 </div>
