--- a/rsvp/admin/templates/admin/invites.html
+++ b/rsvp/admin/templates/admin/invites.html
@@ -12,7 +12,8 @@
                 </th>
             </tr>
             <tr>
-                <th>QR Code</th>
+{#                <th>QR Code</th>#}
+                <th>Code</th>
                 <th>Name</th>
             </tr>
             </thead>
