--- a/rsvp/admin/static/admin/templates/invites/form.html
+++ b/rsvp/admin/static/admin/templates/invites/form.html
@@ -10,6 +10,10 @@
                 <label for="id_name">Name on Invite</label>
                 <input type="text" class="form-control" id="id_name" name="name" value="{{ invite.get('name') }}" />
             </div>
+{#            <div class="form-group">#}
+{#                <label for="id_name">Guests</label>#}
+{#                <input type="text" class="form-control" id="id_name" name="name" value="{{ invite.get('name') }}" />#}
+{#            </div>#}
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
