--- a/rsvp/admin/static/admin/templates/invites/row.html
+++ b/rsvp/admin/static/admin/templates/invites/row.html
@@ -1,9 +1,9 @@
 <tr>
-{#    <td>#}
-{#        <img src="data:image/svg+xml;base64,{{ invite.get('qr_code') }}" style="width:100px;" />#}
-{#    </td>#}
-    <td>{{ invite.get('key') }}</td>
     <td>
-        <a href="{{ invite.get('url') }}">{{ invite.get('name') }}</a>
+        <span class="btn btn-sm btn-default invite-edit" data-id="{{ invite.get('id') }}">
+            <span class="glyphicon glyphicon-pencil"></span>
+        </span>
     </td>
+    <td>{{ invite.get('key') }}</td>
+    <td>{{ invite.get('name') }}</td>
 </tr>
