Allow editing names

--- a/rsvp/admin/templates/admin/invites.html
+++ b/rsvp/admin/templates/admin/invites.html
@@ -12,7 +12,7 @@
                 </th>
             </tr>
             <tr>
-                <th>Code</th>
+                <th>Action</th>
                 <th>Name</th>
             </tr>
             </thead>
