--- a/rsvp/templates/sections/wedding.html
+++ b/rsvp/templates/sections/wedding.html
@@ -22,7 +22,7 @@
                         </li>
                         <li>
                             <span class="icon-map love-icon"></span>
-                            <span>St Athanasius</span>
+                            <span>{{ SITE.ceremony.address.name }}</span>
                         </li>
                     </ul>
                 </div>
