--- a/rsvp/admin/static/admin/templates/invites/form.html
+++ b/rsvp/admin/static/admin/templates/invites/form.html
@@ -19,10 +19,10 @@
                     {% endfor %}
                 </ul>
                 <div>
-                    <span class="btn btn-sm btn-success add-guest">
+                    <button type="button" class="btn btn-sm btn-success add-guest">
                         <span class="glyphicon glyphicon-plus"></span>
                         <span>&nbsp;Add Guest</span>
-                    </span>
+                    </button>
                 </div>
             </div>
         </div>
