--- a/rsvp/admin/templates/admin/base.html
+++ b/rsvp/admin/templates/admin/base.html
@@ -9,7 +9,7 @@
         {% block css %}
             <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
-{#            <link href="{{ static('css/style.css') }}" rel="stylesheet" type="text/css" />#}
+{#            <link href="{{ static('admin/css/style.css') }}" rel="stylesheet" type="text/css" />#}
         {% endblock css %}
         {% block inline_css %}{% endblock inline_css %}
     </head>
@@ -27,11 +27,11 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
+                            <a href="{{ url('admin:stories') }}">Story List</a>
+                        </li>
+                        <li>
                             <a href="{{ url('admin:invites') }}">Invite List</a>
                         </li>
-{#                        <li>#}
-{#                            <a href="#">Link</a>#}
-{#                        </li>#}
                     </ul>
                 </div>
             </div>
