--- a/rsvp/templates/sections/story.html
+++ b/rsvp/templates/sections/story.html
@@ -1,31 +1,37 @@
-
-<section id="story" class="story-section section">
-    <div class="container text-center">
-        <div class="row">
-            <div class="story-box col-md-push-5 col-sm-push-0 col-xs-push-0 col-xs-12 col-md-7">
-                <h3 class="title script title-reversed">
-                    <span class="title-deco-left"></span><span class="title-text">Our Story</span><span class="title-deco-right"></span>
-                </h3>
-                <div class="content-container text-left">
-                    <div id="story-carousel" class="story-carousel carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            {% for story in STORIES %}
-                                <li data-target="#story-carousel" data-slide-to="{{ loop.index0 }}" {% if loop.first %}class="active"{% endif %}> </li>
-                            {% endfor %}
-                        </ol>
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner" role="listbox">
-                            {% for story in STORIES %}
-                                <div class="item {% if loop.first %}active{% endif %}">
-                                    <h4 class="item-title text-center"><span class="icon-couple love-icon"></span>{{ story.title }}
-                                    </h4>
-                                    {{ story.body }}
-                                </div><!--//item-->
-                            {% endfor %}
-                        </div><!--//carousel-inner-->
-                    </div><!--//story-carousel-->
+{% with stories=site.stories.all() %}
+    <section id="story" class="story-section section">
+        <div class="container text-center">
+            <div class="row">
+                <div class="story-box col-md-push-5 col-sm-push-0 col-xs-push-0 col-xs-12 col-md-7">
+                    <h3 class="title script title-reversed">
+                        <span class="title-deco-left"></span>
+                        <span class="title-text">Our Story</span>
+                        <span class="title-deco-right"></span>
+                    </h3>
+                    <div class="content-container text-left">
+                        <div id="story-carousel" class="story-carousel carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                {% for story in stories %}
+                                    <li data-target="#story-carousel" data-slide-to="{{ loop.index0 }}" {% if loop.first %}class="active"{% endif %}>&nbsp;</li>
+                                {% endfor %}
+                            </ol>
+                            <div class="carousel-inner" role="listbox">
+                                {% for story in stories %}
+                                    {% with icon=story.icon %}
+                                        <div class="item {% if loop.first %}active{% endif %}">
+                                            <h4 class="item-title text-center">
+                                                <span class="{{ icon.font_family }} {{ icon.font_class }}"></span>
+                                                <span>{{ story.title }}</span>
+                                            </h4>
+                                            <span>{{ story.body }}</span>
+                                        </div>
+                                    {% endwith %}
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div><!--//story-box-->
-        </div><!--//row-->
-    </div><!--//container-->
-</section><!--//story-section-->
+            </div>
+        </div>
+    </section>
+{% endwith %}
