--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -14,13 +14,9 @@
             <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha256-j+P6EZJVrbXgwSR5Mx+eCS6FvP9Wq27MBRC/ogVriY0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.24.0/css/blueimp-gallery.min.css" integrity="sha256-WTEmtc5r0yk8At+3/AnuA6M5KgC+pyWuq2BOAY2NbPE=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="{{ static('css/loveicon.css') }}" rel="stylesheet" type="text/css" />
             <link href="{{ static('css/style.css') }}" rel="stylesheet" type="text/css" />
-
-{#        <!-- Plugins CSS -->#}
-{#        <link rel="stylesheet" href="assets/plugins/Gallery/css/blueimp-gallery.min.css">#}
-{#        <link rel="stylesheet" href="assets/plugins/Bootstrap-Image-Gallery/css/bootstrap-image-gallery.min.css">#}
-
         {% endblock css %}
         {% block inline_css %}{% endblock inline_css %}
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -47,7 +43,7 @@
                         <ul class="nav navbar-nav center-block">
                             <li class="nav-item"><a class="scrollto" href="#wedding">The Wedding</a></li>
                             <li class="nav-item"><a class="scrollto" href="#story">Our Story</a></li>
-{#                            <li class="nav-item"><a class="scrollto" href="#gallery">Gallery</a></li>#}
+                            <li class="nav-item"><a class="scrollto" href="#gallery">Gallery</a></li>
 {#                            <li class="nav-item"><a class="scrollto" href="#gift">Registries</a></li>#}
                             <li class="nav-item"><a href="#" data-toggle="modal" data-target="#rsvp_modal">RSVP</a></li>
                             <li class="nav-item"><a href="#" data-toggle="modal" data-target="#accommodations_modal">Accommodations</a></li>
@@ -96,12 +92,14 @@
         {% block js %}
             <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.3/js.cookie.min.js" integrity="sha256-S20kSlaai+/AuQHj3KjoLxmxiOLT5298YvzpaTXtYxE=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous" type="text/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js" integrity="sha256-oQ1+24/TB/RpvqqnWnJeS9riShuGf1vHlg8B4lyZ2OE=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" integrity="sha256-obZACiHd7gkOk9iIL/pimWMTJ4W/pBsKu+oZnSeBIek=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js" integrity="sha256-0atoj6xVOJUoBM8Vp5PFywwLLE+aNl2svi4Q9UWZ+dQ=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" integrity="sha256-Q1iNs8Pv5aDBQqByxUM4pQmdzbPFyNooDFJKojYnVpg=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.24/gmaps.min.js" integrity="sha256-C3vPkcHJk9t5Pi6C+Nc+faqv/EZZqNBnxoDfTXEorQk=" crossorigin="anonymous" type="text/javascript"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js" integrity="sha256-7QS1cHsH75h3IFgrFKsdhmKHHpWqF82sb/9vNLqcqs0=" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.24.0/js/jquery.blueimp-gallery.min.js" integrity="sha256-voeQm4++HTaeF4WXDye63GlD3F3BV/pQO54L2clC0oU=" crossorigin="anonymous" type="text/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js" integrity="sha256-7QS1cHsH75h3IFgrFKsdhmKHHpWqF82sb/9vNLqcqs0=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://maps.google.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}" type="text/javascript"></script>
             <script src="{{ static('js/functions.js') }}" type="text/javascript"></script>
             <script src="{{ static('js/countdown.js') }}" type="text/javascript"></script>
@@ -117,26 +115,5 @@
                 });
             </script>
         {% endblock inline_js %}
-
-{#        <!-- Main Javascript -->#}
-{#        <script type="text/javascript" src="assets/plugins/back-to-top.js"></script>#}
-{#        <script type="text/javascript" src="assets/plugins/jquery-placeholder/jquery.placeholder.js"></script>#}
-{#        <script type="text/javascript" src="assets/plugins/jquery-inview/jquery.inview.min.js"></script>#}
-{#        <script type="text/javascript" src="assets/plugins/imagesloaded.pkgd.min.js"></script>#}
-{#        <script type="text/javascript" src="assets/plugins/packery.pkgd.min.js"></script>#}
-{#        <!--//form related JS -->#}
-{#        <script type="text/javascript" src="assets/plugins/jquery-validation/dist/jquery.validate.min.js"></script>#}
-{#        <!--//Image Gallery related JS -->#}
-{#        <script type="text/javascript" src="assets/plugins/Gallery/js/jquery.blueimp-gallery.min.js"></script>#}
-{#        <script type="text/javascript" src="assets/plugins/Bootstrap-Image-Gallery/js/bootstrap-image-gallery.min.js"></script>#}
-{#        <!-- Form iOS fix -->#}
-{#        <script type="text/javascript" src="assets/plugins/isMobile/isMobile.min.js"></script>#}
-{#        <script type="text/javascript" src="assets/js/form-mobile-fix.js"></script>#}
-{#        <!--Ajax Form -->#}
-{#        <script type="text/javascript" src="assets/js/ajax-form.js"></script>#}
-{#        <!-- Animations-->#}
-{#        <script type="text/javascript" src="assets/js/animations.js"></script>#}
-
     </body>
 </html>
-
