--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -12,6 +12,7 @@
         {% endblock fonts %}
         {% block css %}
             <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.3/css/bootstrap3/bootstrap-switch.min.css" integrity="sha256-TmXiemEItWzNM8RAaAW2WZNEadRBPMsiW6RHIQC2D2A=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha256-j+P6EZJVrbXgwSR5Mx+eCS6FvP9Wq27MBRC/ogVriY0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.24.0/css/blueimp-gallery.min.css" integrity="sha256-WTEmtc5r0yk8At+3/AnuA6M5KgC+pyWuq2BOAY2NbPE=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
@@ -94,6 +95,7 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js" integrity="sha256-oQ1+24/TB/RpvqqnWnJeS9riShuGf1vHlg8B4lyZ2OE=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha256-U5ZEeKfGNOja007MMD3YBI0A3OSZOQbeG6z2f2Y0hu8=" crossorigin="anonymous" type="text/javascript"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.3/js/bootstrap-switch.min.js" integrity="sha256-lDGxF93YiQJCM4WXZYZmXNww6vWiPqnVxJgFJvstLGE=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" integrity="sha256-obZACiHd7gkOk9iIL/pimWMTJ4W/pBsKu+oZnSeBIek=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js" integrity="sha256-0atoj6xVOJUoBM8Vp5PFywwLLE+aNl2svi4Q9UWZ+dQ=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" integrity="sha256-Q1iNs8Pv5aDBQqByxUM4pQmdzbPFyNooDFJKojYnVpg=" crossorigin="anonymous" type="text/javascript"></script>
@@ -103,15 +105,15 @@
             <script src="https://maps.google.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}" type="text/javascript"></script>
             <script src="{{ static('js/functions.js') }}" type="text/javascript"></script>
             <script src="{{ static('js/countdown.js') }}" type="text/javascript"></script>
-            <script src="{{ static('js/search.js') }}" type="text/javascript"></script>
             <script src="{{ static('js/script.js') }}" type="text/javascript"></script>
+            <script src="{{ static('js/rsvp.js') }}" type="text/javascript"></script>
         {% endblock js %}
         {% block inline_js %}
             <script type="text/javascript">
                 $(function () {
                     var ceremony_date = new Date("{{ site.ceremony.datetime|date('c') }}");
-                    $('#search_form').search("{{ url('search') }}");
                     $('#countdown_box').countdown(ceremony_date);
+                    $('#rsvp_modal').rsvp_modal();
                 });
             </script>
         {% endblock inline_js %}
