--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -16,6 +16,7 @@
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha256-j+P6EZJVrbXgwSR5Mx+eCS6FvP9Wq27MBRC/ogVriY0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.24.0/css/blueimp-gallery.min.css" integrity="sha256-WTEmtc5r0yk8At+3/AnuA6M5KgC+pyWuq2BOAY2NbPE=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
+            <link href="{{ static('css/checkbox.css') }}" rel="stylesheet" type="text/css" />
             <link href="{{ static('css/loveicon.css') }}" rel="stylesheet" type="text/css" />
             <link href="{{ static('css/style.css') }}" rel="stylesheet" type="text/css" />
         {% endblock css %}
