--- a/rsvp/templates/modals/rsvp.html
+++ b/rsvp/templates/modals/rsvp.html
@@ -32,8 +32,8 @@
                         <label>Please make any required adjustments below.</label>
                     </div>
                     <div class="form-group text-center guests"></div>
-                    <div class="form-group" style="margin-bottom:0;">
-                        <button type="submit" class="btn btn-block btn-primary">We will be there!</button>
+                    <div class="form-group text-center" style="margin-bottom:0;">
+                        <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </form>
             </div>
