--- a/rsvp/admin/templates/admin/base.html
+++ b/rsvp/admin/templates/admin/base.html
@@ -9,7 +9,7 @@
         {% block css %}
             <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
-            <link href="{{ static('admin/css/style.css') }}>?id=1" rel="stylesheet" type="text/css" />
+            <link href="{{ static('admin/css/style.css') }}?id=1" rel="stylesheet" type="text/css" />
         {% endblock css %}
         {% block inline_css %}{% endblock inline_css %}
     </head>
