--- a/rsvp/admin/templates/admin/invites.html
+++ b/rsvp/admin/templates/admin/invites.html
@@ -36,7 +36,7 @@
 
 {% block js %}
     {{ super() }}
-    <script src="{{ static('admin/js/invites.js') }}" type="text/javascript"></script>
+    <script src="{{ static('admin/js/invites.js') }}?id=1" type="text/javascript"></script>
 {% endblock js %}
 
 {% block inline_js %}
