--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -16,9 +16,9 @@
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" integrity="sha256-j+P6EZJVrbXgwSR5Mx+eCS6FvP9Wq27MBRC/ogVriY0=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
             <link href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.24.0/css/blueimp-gallery.min.css" integrity="sha256-WTEmtc5r0yk8At+3/AnuA6M5KgC+pyWuq2BOAY2NbPE=" crossorigin="anonymous" rel="stylesheet" type="text/css" />
-            <link href="{{ static('css/checkbox.css') }}?id=1" rel="stylesheet" type="text/css" />
-            <link href="{{ static('css/loveicon.css') }}?id=1" rel="stylesheet" type="text/css" />
-            <link href="{{ static('css/style.css') }}?id=1" rel="stylesheet" type="text/css" />
+            <link href="{{ static('css/checkbox.css') }}?_ts={{ stamp }}" rel="stylesheet" type="text/css" />
+            <link href="{{ static('css/loveicon.css') }}?_ts={{ stamp }}" rel="stylesheet" type="text/css" />
+            <link href="{{ static('css/style.css') }}?_ts={{ stamp }}" rel="stylesheet" type="text/css" />
         {% endblock css %}
         {% block inline_css %}{% endblock inline_css %}
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -104,10 +104,10 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.24.0/js/jquery.blueimp-gallery.min.js" integrity="sha256-voeQm4++HTaeF4WXDye63GlD3F3BV/pQO54L2clC0oU=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js" integrity="sha256-7QS1cHsH75h3IFgrFKsdhmKHHpWqF82sb/9vNLqcqs0=" crossorigin="anonymous" type="text/javascript"></script>
             <script src="https://maps.google.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}" type="text/javascript"></script>
-            <script src="{{ static('js/functions.js') }}?id=1" type="text/javascript"></script>
-            <script src="{{ static('js/countdown.js') }}?id=1" type="text/javascript"></script>
-            <script src="{{ static('js/script.js') }}?id=1" type="text/javascript"></script>
-            <script src="{{ static('js/rsvp.js') }}?id=1" type="text/javascript"></script>
+            <script src="{{ static('js/functions.js') }}?_ts={{ stamp }}" type="text/javascript"></script>
+            <script src="{{ static('js/countdown.js') }}?_ts={{ stamp }}" type="text/javascript"></script>
+            <script src="{{ static('js/script.js') }}?_ts={{ stamp }}" type="text/javascript"></script>
+            <script src="{{ static('js/rsvp.js') }}?_ts={{ stamp }}" type="text/javascript"></script>
         {% endblock js %}
         {% block inline_js %}
             <script type="text/javascript">
