Add images to each story section
Fixed a bug in the admin and added images to each page of the story.

--- a/rsvp/static/css/style.css
+++ b/rsvp/static/css/style.css
@@ -648,7 +648,7 @@ label {
 
 /* ======= Story Section ======= */
 .story-section {
-    background: #413a38 url('../img/story-bg.jpg') no-repeat 50% top;
+    background: #413a38 url('../img/story-bg1.jpg') no-repeat 50% top;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
