First round adding wedding party

--- a/rsvp/templates/index.html
+++ b/rsvp/templates/index.html
@@ -45,8 +45,8 @@
                         <ul class="nav navbar-nav center-block">
                             <li class="nav-item"><a class="scrollto" href="#wedding">The Wedding</a></li>
                             <li class="nav-item"><a class="scrollto" href="#story">Our Story</a></li>
-                            <li class="nav-item"><a class="scrollto" href="#gallery">Gallery</a></li>
-{#                            <li class="nav-item"><a class="scrollto" href="#gift">Registries</a></li>#}
+                            <li class="nav-item"><a class="scrollto" href="#gift">Registries</a></li>
+                            <li class="nav-item"><a class="scrollto" href="#party">Wedding Party</a></li>
                             <li class="nav-item"><a href="#" data-toggle="modal" data-target="#rsvp_modal">RSVP</a></li>
                             <li class="nav-item"><a href="#" data-toggle="modal" data-target="#accommodations_modal">Accommodations</a></li>
                         </ul>
@@ -77,6 +77,7 @@
         </div>
         {% include 'sections/wedding.html' %}
         {% include 'sections/story.html' %}
+        {% include 'sections/party.html' %}
         {% include 'sections/gallery.html' %}
         {% include 'sections/gifts.html' %}
         <footer class="footer">
