Split stories apart and added groomsmen info

--- a/rsvp/templates/sections/party.html
+++ b/rsvp/templates/sections/party.html
@@ -65,10 +65,48 @@
                 </div>
             </div>
             <div class="row">
-                <h3 class="text-center">
-                    Groomsmen coming soon... (whenever Adam gets around to it)
-                </h3>
-                <br /><br /><br />
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="{{ static('img/party/aaron.jpg') }}" style="width: 100%;" />
+                        <div class="card-block">
+                            <h4 class="card-title">Best Man: Aaron</h4>
+                            <p class="card-text">
+                                Adam is a man of few words. So few that it only took him four words to describe the relationship he has with his brother...
+                            </p>
+                            <div class="text-center">
+                                <span class="btn btn-primary" data-toggle="modal" data-target="#aaron_details">Read More</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="{{ static('img/party/joe-and-joel.jpg') }}" style="width: 100%;" />
+                        <div class="card-block">
+                            <h4 class="card-title">Groomsmen: Joe and Joel</h4>
+                            <p class="card-text">
+                                These two will be lumped together for two reasons. First, pretty much the same description was given for both Joe and Joel...
+                            </p>
+                            <div class="text-center">
+                                <span class="btn btn-primary" data-toggle="modal" data-target="#joe_joel_details">Read More</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="{{ static('img/party/tim.jpg') }}" style="width: 100%;" />
+                        <div class="card-block">
+                            <h4 class="card-title">Groomsman: Tim</h4>
+                            <p class="card-text">
+                                Adam opened up a little more about his friendship with Tim, using eight words to describe the relationship...
+                            </p>
+                            <div class="text-center">
+                                <span class="btn btn-primary" data-toggle="modal" data-target="#tim_details">Read More</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
@@ -154,6 +192,80 @@
                         </div>
                         <p>
                             They've been friends since college and never lack things to talk about. Leah and Hannah are both dental hygienists, so naturally the topic of teeth often come up in conversation. And they also like talking about their pets. Presumably, they don't spend much time talking about their pets' teeth (or do they?). However, Leah and Hannah insist they don't spend that much time talking about teeth. Hannah's husband, an innocent bystander, disagrees. But their friendship does go beyond the excitement of talking about teeth. Not that it would take much but they've enjoyed the excitement of skydiving and they've pushed themselves through half-marathons, trail runs and duathlons. For those not sure, duathlons typically involve running, biking, and then more running. They apparently don't like to swim. Hannah and Leah mainly complete these physical activities for one reason: to enjoy ice cream afterwards without guilt.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="aaron_details" tabindex="-1" >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                        <h4>Best Man: Aaron</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="text-center">
+                            <img class="img-thumbnail" src="{{ static('img/party/aaron.jpg') }}" style="max-width: 350px;" />
+                        </div>
+                        <p>
+                            <strong>Adam's Version:</strong>
+                            <br/>
+                            Brother, we do everything together.
+                        </p>
+                        <p>
+                            Adam is a man of few words. So few that it only took him four words to describe the relationship he has with his brother, Adam: “We do everything together.” A description that is truly rich and compelling. Because there’s some space to fill here, we will just use our imagination to fill in the void. We can assume Adam and Aaron go grab drinks together. They likely might grab a bite to eat together. Maybe they’re taking bubble baths together while watching reruns of the Golden Girls. Who knows? Leah said she knows the brothers enjoy garage tinkering, which likely means fixing things in their garage, and not fixing the garage itself. Leah also knows they enjoy fishing in Canada and snowmobiling out west. For some reason, they really enjoy snowmobiling in Colorado. Something about recent changes in the law or something. Laws that result in them wanting more snacks than usual. Apparently, they also enjoy harassing and picking on their dad. That doesn’t make them sound real nice, but OK. And Leah said they also copy each other. If Adam gets a jeep, Aaron gets a jeep. If Aaron gets a nice ice fishing hut, Adam gets a nice ice fishing hut.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="joe_joel_details" tabindex="-1" >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                        <h4>Groomsmen: Joe and Joel</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="text-center">
+                            <img class="img-thumbnail" src="{{ static('img/party/joe-and-joel.jpg') }}" style="max-width: 350px;" />
+                        </div>
+                        <p>
+                            <strong>Adam's Version:</strong>
+                            <br/>
+                            Joe: Known him since middle school, go fishing and golfing together.
+                            <br/>
+                            Joel: Known him since grade school, went to college together, go fishing and golfing together.
+                        </p>
+                        <p>
+
+                        </p>
+                        <p>
+                            These two will be lumped together for two reasons. First, pretty much the same description was given for both Joe and Joel. And second, Leah said she was going to use a photo of Adam, Joe and Joel all together (and his step-dad). Joe and Adam have been friends since grade school and they went to college together. They enjoy fishing and golfing together. Joel and Adam have only been friends since middle school. Not sure if they didn’t like each other in grade school or they just ignored Joel. Feel free to use that as a conversation starter at the reception. So, guess what Adam and Joel enjoy doing together? Yep, fishing and golfing. Leah also noted that the three friends grow “AWFUL” mustaches and use dye to make them look better. Leah capitalized every letter in awful to stress how, well, awful, the mustaches look. However, Leah is fond of Joe and Joel because they did their best to push Adam to propose. Of course, their best must have stunk for the most part as it took Adam almost four years to propose. Good try anyway guys.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="tim_details" tabindex="-1" >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                        <h4>Groomsman: Tim</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="text-center">
+                            <img class="img-thumbnail" src="{{ static('img/party/tim.jpg') }}" style="max-width: 350px;" />
+                        </div>
+                        <p>
+                            <strong>Adam's Version:</strong>
+                            <br/>
+                            Grew up in the same neighborhood, build jeeps.
+                        </p>
+                        <p>
+                            Adam opened up a little more about his friendship with Tim, using eight words to describe the relationship: “Grew up in the same neighborhood. Build jeeps.” After reading that, you probably feel like you’ve known Adam and Tim your entire life. Tim was in the garage when Leah and Adam first met, gathered to drink before going out to drink some more. Leah gave a glowing remembrance of her first meeting with Tim, saying, “How I didn’t run away right then and there is beyond me.” Apparently, Adam and Tim bring out the BEST in one another when they are together. Adam and Tim used to cruise around town on mopeds back in their younger days, according to Leah. Presumably because they enjoyed doing so, and weren’t forced to do so after losing their license.
                         </p>
                     </div>
                 </div>
