--- a/rsvp/static/css/style.css
+++ b/rsvp/static/css/style.css
@@ -648,13 +648,34 @@ label {
 
 /* ======= Story Section ======= */
 .story-section {
+    /*background: #413a38 url('../img/story-bg1.jpg') no-repeat 50% top;*/
+    /*-webkit-background-size: cover;*/
+    /*-moz-background-size: cover;*/
+    /*-o-background-size: cover;*/
+    /*background-size: cover;*/
+    /*padding-top: 60px;*/
+    /*padding-bottom: 90px;*/
+}
+.story-section .bg1,
+.story-section .bg2,
+.story-section .bg3 {
     background: #413a38 url('../img/story-bg1.jpg') no-repeat 50% top;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    padding-bottom: 60px;
+    margin-bottom: 25px;
     padding-top: 60px;
-    padding-bottom: 90px;
+    min-height: 500px;
+}
+
+.story-section .bg2 {
+    background-image: url('../img/story-bg2.jpg');
+}
+
+.story-section .bg3 {
+    background-image: url('../img/story-bg3.jpg');
 }
 
 .story-section .container {
