--- a/rsvp/templates/sections/party.html
+++ b/rsvp/templates/sections/party.html
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="{{ static('img/party/aaron.jpg') }}" style="width: 100%;" />
+                        <img class="card-img-top" src="{{ static('img/party/aaron2.jpg') }}" style="width: 100%;" />
                         <div class="card-block">
                             <h4 class="card-title">Best Man: Aaron</h4>
                             <p class="card-text">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img class="card-img-top" src="{{ static('img/party/tim.jpg') }}" style="width: 100%;" />
+                        <img class="card-img-top" src="{{ static('img/party/tim2.jpg') }}" style="width: 100%;" />
                         <div class="card-block">
                             <h4 class="card-title">Groomsman: Tim</h4>
                             <p class="card-text">
@@ -206,7 +206,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="text-center">
-                            <img class="img-thumbnail" src="{{ static('img/party/aaron.jpg') }}" style="max-width: 350px;" />
+                            <img class="img-thumbnail" src="{{ static('img/party/aaron2.jpg') }}" style="max-width: 350px;" />
                         </div>
                         <p>
                             <strong>Adam's Version:</strong>
@@ -234,9 +234,9 @@
                         <p>
                             <strong>Adam's Version:</strong>
                             <br/>
-                            Joe: Known him since middle school, go fishing and golfing together.
+                            Joe: Known him since grade school, went to college together, go fishing and golfing together.
                             <br/>
-                            Joel: Known him since grade school, went to college together, go fishing and golfing together.
+                            Joel: Known him since middle school, go fishing and golfing together.
                         </p>
                         <p>
 
@@ -257,7 +257,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="text-center">
-                            <img class="img-thumbnail" src="{{ static('img/party/tim.jpg') }}" style="max-width: 350px;" />
+                            <img class="img-thumbnail" src="{{ static('img/party/tim2.jpg') }}" style="max-width: 350px;" />
                         </div>
                         <p>
                             <strong>Adam's Version:</strong>
